# proyectodesarrollo

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  body.txt  coverage.xml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml  docker-build.yml
docs/: architecture.md
src/: __init__.py
src/alarm/: __init__.py  alert_system.py  driving_timer.py  rest_advisor.py  voice_alert.py  voice_engine.py
src/api/: database.py  main.py  schemas.py  state.py
src/api/models/: __init__.py  alert_event.py  driver.py  driving_session.py
src/api/routes/: alerts.py  drivers.py  health.py  metrics.py  sessions.py  stats.py  stream.py  ws.py
src/core/: detector.py  event_classifier.py  head_pose.py  phone_detector.py  phone_result.py  temporal.py  video_stream.py
src/interface/: __init__.py  dashboard.py  deshboard.py
src/static/css/: admin.css  dashboard.css
src/static/js/: admin.js  dashboard.js
src/templates/: admin.html  dashboard.html
src/utils/: calculations.py  drawing.py  logger.py  mediapipe_wrapper.py  preprocess.py
tests/: test_drawing.py  test_state.py
tests/integration/: test_api.py  test_api_v2.py  test_database.py  test_full_pipeline.py
tests/unit/: test_alert_system.py  test_calculations.py  test_detector.py  test_driving_timer.py  test_head_pose.py  test_logger.py  test_phone_detector.py  test_rest_advisor.py  test_temporal.py  test_video_stream.py  test_voice_alert.py
