[tool.poetry]
name = "drowsyguard"
version = "3.0.0"
description = "Real-time driver drowsiness detection system"
authors = ["DrowsyGuard Team <team@drowsyguard.dev>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.10.8"
opencv-contrib-python = "^4.8.1"
numpy = "^1.26.0"
sounddevice = "^0.4.6"
loguru = "^0.7.2"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
jinja2 = "^3.1.6"
aiofiles = "^25.1.0"
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
pyttsx3 = "^2.99"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-cov = "^5.0.0"
black = "^24.3.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^1.4.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
